--- a/index.html
+++ b/index.html
@@ -2,10 +2,38 @@
 
 <html>
   <head>
-
+    <title> George Boole </title>
   </head>
 
   <body>
+    <h1> Let's Talk George Boole!</h1>
+
+    <p>
+      The creator of Boolean Algebra and Symbolic Logic, thus, transforming the way computers think.
+    </p>
+
+    <p>
+      <h2> Table of Contents </h2>
+      <!-- ordered list-->
+       <ol>
+          <li>
+           <a href="./pages/history.html">Life and Important History</a>
+          </li>
+          <li>
+            <a href="./pages/significance.html">Revolutionization of Computer Science</a>
+          </li>
+          <li>
+            <a href="./pages/sources.html">Bibliography</a>
+          </li>
+       </ol>
+    </p>
+
+    <p>
+      <figure>
+        <img src="images/george_boole_black_and_white.jpeg" alt="george boole black and white" width="45%">
+        <figcaption>George Boole</figcaption>
+      </figure>
+    </p>
 
   </body>
 
