--- a/pages/history.html
+++ b/pages/history.html
@@ -9,13 +9,13 @@
     <h1> Life and Important History</h1>
 
     <p>
-      <h2>Life</h2>
+        <h2>Life</h2>
     </p>
 
     <hr>
 
     <p>
-
+        <h2>Important History Dates</h2>
     </p>
 
   </body>
