more pics and contents

--- a/pages/history.html
+++ b/pages/history.html
@@ -9,13 +9,39 @@
     <h1> Life and Important History</h1>
 
     <p>
-        <h2>Life</h2>
+      <h2>George Boole's Life</h2>
+      Lived from 1815-1864.
+      <br>
+      English mathematician and philosopher.
+      <br>
+      First professor of math at University College Cork, Ireland (then: Queens College)
+    </p>
+
+    <p>
+      <figure>
+        <img src="../images/george_boole_statue_university.jpg" alt="george boole university statue" width="20%">
+        <figcaption>University College Cork, Ireland</figcaption>
+      </figure>
     </p>
 
     <hr>
 
     <p>
-        <h2>Important History Dates</h2>
+      <h2>Historical Dates</h2>
+      <table border="2">
+          <tr>
+            <th>Invented Boolean Algebra: 1847</th>
+            <th> Invented Symbolic Logic: 1854</th>
+          </tr>
+          <tr>
+            <td>
+              <img src="../images/analysis_of_logic_book.jpg" alt="Book The Mathematical Analysis of Logic" width="50%">
+            </th>
+            <td>
+              <img src="../images/laws_of_thought_book.jpg" alt="Book An Investigation of the Laws of Thought" width="50%">
+            </td>
+          </tr>
+      </table>
     </p>
 
   </body>
