--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
            <a href="./pages/history.html">Life and Important History</a>
           </li>
           <li>
-            <a href="./pages/significance.html">Revolutionization of Computer Science</a>
+            Revolutionization of Computer Science
+            <ol type="a">
+              <li>
+                <a href="./pages/functioning.html">Functioning of the Creations</a>
+              </li>
+              <li>
+                <a href="./pages/significance.html">Importance of the Creations</a>
+              </li>
+            </ol>
           </li>
           <li>
             <a href="./pages/sources.html">Bibliography</a>
@@ -30,8 +38,15 @@
 
     <p>
       <figure>
-        <img src="images/george_boole_black_and_white.jpeg" alt="george boole black and white" width="45%">
+        <img src="images/george_boole_black_and_white.jpeg" alt="George Boole black and white" width="20%">
         <figcaption>George Boole</figcaption>
+      </figure>
+    </p>
+
+    <p>
+      <figure>
+        <img src="images/george_boole_university_plaque.jpg" alt="Plaque of George Boole at University College Cork" width="30%">
+        <figcaption>Plaque at University College Cork, Ireland</figcaption>
       </figure>
     </p>
 
