finished functioning and started significance

--- a/pages/history.html
+++ b/pages/history.html
@@ -35,11 +35,19 @@
           </tr>
           <tr>
             <td>
-              <img src="../images/analysis_of_logic_book.jpg" alt="Book The Mathematical Analysis of Logic" width="50%">
-            </th>
+              <img src="../images/analysis_of_logic_book.jpg" alt="Book The Mathematical Analysis of Logic" width="30%">
+            </td>
             <td>
               <img src="../images/laws_of_thought_book.jpg" alt="Book An Investigation of the Laws of Thought" width="50%">
             </td>
+            <tr>
+              <td>
+                An Essay to lead to a calculus of deductive reasoning.
+                Explained the new branch of math: Boolean Algebra.
+              </td>
+              <td>
+                Explained that algebra can be adopted to logic instead of math.
+              </td>
           </tr>
       </table>
     </p>
