finished significance started bibliography

--- a/pages/history.html
+++ b/pages/history.html
@@ -6,20 +6,28 @@
   </head>
 
   <body>
+
+    <button>
+      <a href="../index.html" class="button">Back to Home</a>
+    </button>
+
     <h1> Life and Important History</h1>
 
     <p>
       <h2>George Boole's Life</h2>
-      Lived from 1815-1864.
-      <br>
-      English mathematician and philosopher.
-      <br>
-      First professor of math at University College Cork, Ireland (then: Queens College)
+      George Boole lived from 1815-1864 and worked as an English mathematician and philosopher. He was the first professor of math at University College Cork, Ireland (then: Queens College). Boole dedicated his life to understanding the human mind and with this diligentness, was able to apply mathematical ideas to logic to create Boolean Algebra and Symbolic Logic.
     </p>
 
     <p>
       <figure>
-        <img src="../images/george_boole_statue_university.jpg" alt="george boole university statue" width="20%">
+        <img src="../images/george_boole_statue_university.jpg" alt="George Boole University Statue" width="20%">
+        <figcaption>University College Cork, Ireland</figcaption>
+      </figure>
+    </p>
+
+    <p>
+      <figure>
+        <img src="../images/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="20%">
         <figcaption>University College Cork, Ireland</figcaption>
       </figure>
     </p>
