--- a/pages/functioning.html
+++ b/pages/functioning.html
@@ -6,6 +6,11 @@
   </head>
 
   <body>
+
+    <button>
+        <a href="../index.html" class="button">Back to Home</a>
+    </button>
+
     <p>
         <h1>Revolutionization of Computer Science<h1>
         <h2>Functioning of the Creations<h2>
@@ -15,6 +20,7 @@
         <h2>Boolean Algebra</h2>
         Boolean expressions compare two values and evaluates the results, which are always true or false (1 or 0). This made it possible to use normal algebraic techniques to solve equations and make logical relations.
     </p>
+
     <p>
         <figure>
             <img src="../images/boolean_expressions_basic_example.jpg" alt="Basic Example of Boolean Expressions" width="20%">
@@ -35,6 +41,7 @@
         <br>
         Example: And, or, not
    </p>
+
    <p>
         <figure>
             <img src="../images/boolean_operator_example_illustration.jpg" alt="Example of not operator" width="20%">
@@ -44,6 +51,7 @@
             </figcaption>
         </figure>
     </p>
+
     <p>
         <figure>
             <img src="../images/boolean_operator_true_false_example.jpg" alt="Example of input and result true or false" width="20%">
@@ -57,6 +65,7 @@
         <h2>Symbolic Logic</h2>
         Symbolic Logic is the simplest form of logic. It includes symbolic notation and variables to represent logical expressions and avoid vagueness like in the human speech.
     </p>
+    
     <p>
         <figure>
             <img src="../images/symbolic_logic_from_human_speech.jpg" alt="Example of input and result true or false" width="20%">
