--- a/pages/significance.html
+++ b/pages/significance.html
@@ -6,6 +6,11 @@
   </head>
 
   <body>
+
+    <button>
+      <a href="../index.html" class="button">Back to Home</a>
+    </button>
+    
     <p>
         <h1>Revolutionization of Computer Science<h1>
         <h2>Importance of the Creations<h2>
@@ -18,8 +23,34 @@
     <p>
         <b>Computer Circuits/Gates:</b>
         <br>
-        hiiiii
+        Boolean Algebra analyzed and was able to simplify digital circuits. For example, logic gatesuse Boolean Logic (a.k.a. Boolean Algebra) by controlling the circulation of electricity in a device. In addition, they use Boolean Operators and algebraic expressions to define instructions.
    </p>
+
+    <p>
+      <img src="../images/logic_gates_boolean_algebra.jpg" alt="Boolean Expressions in Logic Circuits"width="20%">
+    </p>
+
+  <p>
+    <figure>
+        <img src="../images/boolean_operators_logic_gates.jpg" alt="Boolean Operators in Logic Gates" width="20%">
+         <figcaption>Boolean Operators in Logic Gates</figcaption>
+    </figure>
+  </p>
+
+  <hr>
+
+  <p>
+    <h2>Boolean Logic</h2>
+    The creation of symbolic notation was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
+  </p>
+
+  <p>
+    <img src="../images/game_over_coding_example.png" alt="Boolean Operators in code"width="30%">
+  </p>
+
+  <p>
+    <img src="../images/false_true_in_code.jpg" alt="More Boolean Operators in code wit true or false"width="20%">
+  </p>
 
   </body>
 
