--- a/pages/sources.html
+++ b/pages/sources.html
@@ -6,10 +6,23 @@
   </head>
 
   <body>
+
+    <button>
+      <a href="../index.html" class="button">Back to Home</a>
+    </button>
+
     <h1> Bibliography</h1>
 
     <p>
-        “Boolean Logic.” <cite>Illinois State Board of Education.</cite> <a href="https://www.isbe.net/CTEDocuments/BMCE-780026.pdf" target="_blank">isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024
+        “Boolean Logic.” <cite>Illinois State Board of Education.</cite> <a href="https://www.isbe.net/CTEDocuments/BMCE-780026.pdf" target="_blank">isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024.
+    </p>
+
+    <p>
+      Britannica, The Editors of Encyclopedia. “formal system.” <cite>Encyclopedia Britannica,</cite> 6 Jan. 2012, <a href="https://www.britannica.com/topic/formal-system" target="_blank">isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024.
+    </p>
+
+    <p>
+      Burris, Stanley. “George Boole (Stanford Encyclopedia of Philosophy).” <cite>Stanford.edu,</cite> 29 Dec. 2021, <a href="http://plato.stanford.edu/entries/boole/" target="_blank">isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024.
     </p>
 
   </body>
