aligned images RAHHHHHHHH and sources done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title> George Boole </title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
@@ -36,19 +37,24 @@
        </ol>
     </p>
 
-    <p>
-      <figure>
-        <img src="images/george_boole_black_and_white.jpeg" alt="George Boole black and white" width="20%">
-        <figcaption>George Boole</figcaption>
-      </figure>
-    </p>
+    <div class="flexbox-container">
+      <div class="flexbox-item felxbox-item-1">
+        <figure>
+            <img src="images/george_boole_university_plaque.jpg" alt="Plaque of George Boole at University College Cork" width="100%">
+            <figcaption>Plaque at University College Cork, Ireland
+           </figcaption>
+        </figure>
+      </div>
 
-    <p>
-      <figure>
-        <img src="images/george_boole_university_plaque.jpg" alt="Plaque of George Boole at University College Cork" width="30%">
-        <figcaption>Plaque at University College Cork, Ireland</figcaption>
-      </figure>
-    </p>
+    <div class="flexbox-container">
+      <div class="flexbox-item felxbox-item-2">
+        <figure>
+            <img src="images/george_boole_black_and_white.jpeg" alt="George Boole black and white" width="100%">
+            <figcaption>George Boole</figcaption>
+        </figure>
+   </div>
+
+    
 
   </body>
 
