i got table to work but flexbox is messing me up

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
        </ol>
     </p>
 
+    <p>
     <div class="flexbox-container">
-      <div class="flexbox-item felxbox-item-1">
+      <div class="flexbox-item flexbox-item-1">
         <figure>
             <img src="images/george_boole_university_plaque.jpg" alt="Plaque of George Boole at University College Cork" width="100%">
             <figcaption>Plaque at University College Cork, Ireland
@@ -47,14 +48,13 @@
       </div>
 
     <div class="flexbox-container">
-      <div class="flexbox-item felxbox-item-2">
+      <div class="flexbox-item flexbox-item-2">
         <figure>
             <img src="images/george_boole_black_and_white.jpeg" alt="George Boole black and white" width="100%">
             <figcaption>George Boole</figcaption>
         </figure>
-   </div>
-
-    
+    </div>
+    </p>
 
   </body>
 
