--- a/pages/history.html
+++ b/pages/history.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title> George Boole - Life and Important History</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -19,17 +20,23 @@
     </p>
 
     <p>
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
       <figure>
         <img src="../images/george_boole_statue_university.jpg" alt="George Boole University Statue" width="20%">
         <figcaption>University College Cork, Ireland</figcaption>
       </figure>
+    </div>
     </p>
 
     <p>
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-2">
       <figure>
         <img src="../images/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="20%">
         <figcaption>University College Cork, Ireland</figcaption>
       </figure>
+    </div>
     </p>
 
     <hr>
@@ -42,15 +49,16 @@
             <th> Invented Symbolic Logic: 1854</th>
           </tr>
           <tr>
-            <td>
-              <img src="../images/analysis_of_logic_book.jpg" alt="Book The Mathematical Analysis of Logic" width="30%">
-            </td>
-            <td>
-              <img src="../images/laws_of_thought_book.jpg" alt="Book An Investigation of the Laws of Thought" width="50%">
-            </td>
+            <th>
+              <img src="../images/analysis_of_logic_book.jpg" alt="Book The Mathematical Analysis of Logic" width="60%">
+            </th>
+            <th>
+              <img src="../images/laws_of_thought_book.jpg" alt="Book An Investigation of the Laws of Thought" width="60%">
+            </th>
             <tr>
               <td>
                 An Essay to lead to a calculus of deductive reasoning.
+                <br>
                 Explained the new branch of math: Boolean Algebra.
               </td>
               <td>
