the pics are finally aligned properly now i can die

--- a/pages/functioning.html
+++ b/pages/functioning.html
@@ -3,9 +3,10 @@
 <html>
   <head>
     <title>George Boole - Functioning of the Creations</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
-  <body>
+<body>
 
     <button>
         <a href="../index.html" class="button">Back to Home</a>
@@ -43,20 +44,28 @@
    </p>
 
    <p>
-        <figure>
-            <img src="../images/boolean_operator_example_illustration.jpg" alt="Example of not operator" width="20%">
-            <figcaption>Example of "not" Operator
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-item-1">
+                <figure>
+                    <img src="../images/boolean_operator_example_illustration.jpg" alt="Example of not operator" width="100%">
+                    <figcaption>Example of "not" Operator
                         <br>
                         Statement: not True, then False
-            </figcaption>
-        </figure>
+                    </figcaption>
+                 </figure>
+            </div>
     </p>
 
     <p>
-        <figure>
-            <img src="../images/boolean_operator_true_false_example.jpg" alt="Example of input and result true or false" width="20%">
-             <figcaption>Example of Input and Result</figcaption>
-        </figure>
+        <div class="flexbox-container">
+            <div class="flexbox-item flexbox-item-1">
+                <figure>
+                    <img src="../images/boolean_operator_true_false_example.jpg" alt="Example of input and result true or false" width="110%">
+                    <figcaption>Example of Input and Result</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
     </p>
 
      <hr>
@@ -68,14 +77,14 @@
     
     <p>
         <figure>
-            <img src="../images/symbolic_logic_from_human_speech.jpg" alt="Example of input and result true or false" width="20%">
-             <figcaption>Example of Human Speech to symbols
+            <img src="../images/symbolic_logic_from_human_speech.jpg" alt="Example of input and result true or false" width="30%">
+            <figcaption>Example of Human Speech to symbols
                         <br>
                         Notice the clarity and brevity of the symbols in comparison to the speech
-             </figcaption>
+            </figcaption>
         </figure>
     </p>
 
-  </body>
+</body>
 
 </html>
