--- a/pages/history.html
+++ b/pages/history.html
@@ -22,21 +22,23 @@
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
-      <figure>
-        <img src="../images/george_boole_statue_university.jpg" alt="George Boole University Statue" width="20%">
-        <figcaption>University College Cork, Ireland</figcaption>
-      </figure>
-    </div>
+          <figure>
+            <img src="../images/george_boole_statue_university.jpg" alt="George Boole University Statue" width="100%">
+           <figcaption>University College Cork, Ireland</figcaption>
+         </figure>
+        </div>
     </p>
 
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-2">
-      <figure>
-        <img src="../images/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="20%">
-        <figcaption>University College Cork, Ireland</figcaption>
-      </figure>
-    </div>
+          <figure>
+           <img src="../images/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="60%">
+          <figcaption>George Boole</figcaption>
+         </figure>
+         </div>
+        </div>
+      </div>
     </p>
 
     <hr>
