--- a/pages/significance.html
+++ b/pages/significance.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title> George Boole - Importance of the Creations</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -27,30 +28,44 @@
    </p>
 
     <p>
-      <img src="../images/logic_gates_boolean_algebra.jpg" alt="Boolean Expressions in Logic Circuits"width="20%">
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
+      <img src="../images/logic_gates_boolean_algebra.jpg" alt="Boolean Expressions in Logic Circuits"width="70%">
+        </div>
     </p>
 
-  <p>
-    <figure>
-        <img src="../images/boolean_operators_logic_gates.jpg" alt="Boolean Operators in Logic Gates" width="20%">
-         <figcaption>Boolean Operators in Logic Gates</figcaption>
-    </figure>
-  </p>
+    <p>
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
+          <figure>
+            <img src="../images/boolean_operators_logic_gates.jpg" alt="Boolean Operators in Logic Gates" width="100%">
+          <figcaption>Boolean Operators in Logic Gates</figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
+    </p>
 
-  <hr>
+    <hr>
 
-  <p>
-    <h2>Boolean Logic</h2>
-    The creation of symbolic notation was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
-  </p>
+    <p>
+      <h2>Boolean Logic</h2>
+      The creation of symbolic notation was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
+    </p>
 
-  <p>
-    <img src="../images/game_over_coding_example.png" alt="Boolean Operators in code"width="20%">
-  </p>
+    <p>
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
+     <img src="../images/game_over_coding_example.png" alt="Boolean Operators in code"width="80%">
+        </div>
+    </p>
 
-  <p>
-    <img src="../images/false_true_in_code.jpg" alt="More Boolean Operators in code wit true or false"width="10%">
-  </p>
+    <p>
+      <div class="flexbox-container">
+        <div class="flexbox-item flexbox-item-1">
+      <img src="../images/false_true_in_code.jpg" alt="More Boolean Operators in code wit true or false"width="50%">
+        </div>
+    </p>
 
   </body>
 
