final comit maybe

--- a/pages/history.html
+++ b/pages/history.html
@@ -16,14 +16,21 @@
 
     <p>
       <h2>George Boole's Life</h2>
+    </p>
+    <p>
       George Boole lived from 1815-1864 and worked as an English mathematician and philosopher. He was the first professor of math at University College Cork, Ireland (then: Queens College). Boole dedicated his life to understanding the human mind and with this diligentness, was able to apply mathematical ideas to logic to create Boolean Algebra and Symbolic Logic.
+    </p>
+
+    <p>
+      You can find out more about George Boole's life here:
+      <a href="https://mathshistory.st-andrews.ac.uk/Biographies/Boole/" target="_blank">Click Me!!!</a>
     </p>
 
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
           <figure>
-            <img src="../images/george_boole_statue_university.jpg" alt="George Boole University Statue" width="100%">
+            <img src="../images/georgebooleface/george_boole_statue_university.jpg" alt="George Boole University Statue" width="100%">
            <figcaption>University College Cork, Ireland</figcaption>
          </figure>
         </div>
@@ -33,7 +40,7 @@
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-2">
           <figure>
-           <img src="../images/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="60%">
+           <img src="../images/georgebooleface/george_boole_colored_drawing.jpg" alt="George Boole Colored Picture" width="60%">
           <figcaption>George Boole</figcaption>
          </figure>
          </div>
