--- a/pages/significance.html
+++ b/pages/significance.html
@@ -14,13 +14,16 @@
     
     <p>
         <h1>Revolutionization of Computer Science<h1>
-        <h2>Importance of the Creations<h2>
+        <h2 id="secondheading">Importance of the Creations<h2>
     </p>
 
     <p>
         <h2>Boolean Algebra</h2>
+    </p>
+    <p>
         Boolean expressions and values led to the understanding of two binary states (1 or 0, true or false) in computers. This new branch of mathematics opened a large field of possibilities so others could later create programming languages and namely, computer circuits.
     </p>
+
     <p>
         <b>Computer Circuits/Gates:</b>
         <br>
@@ -30,7 +33,7 @@
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
-      <img src="../images/logic_gates_boolean_algebra.jpg" alt="Boolean Expressions in Logic Circuits"width="70%">
+      <img src="../images/significance/logic_gates_boolean_algebra.jpg" alt="Boolean Expressions in Logic Circuits"width="70%">
         </div>
     </p>
 
@@ -38,7 +41,7 @@
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
           <figure>
-            <img src="../images/boolean_operators_logic_gates.jpg" alt="Boolean Operators in Logic Gates" width="100%">
+            <img src="../images/significance/boolean_operators_logic_gates.jpg" alt="Boolean Operators in Logic Gates" width="100%">
           <figcaption>Boolean Operators in Logic Gates</figcaption>
           </figure>
         </div>
@@ -50,20 +53,22 @@
 
     <p>
       <h2>Boolean Logic</h2>
+    </p>
+    <p>
       The creation of symbolic notation was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
     </p>
 
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
-     <img src="../images/game_over_coding_example.png" alt="Boolean Operators in code"width="80%">
+     <img src="../images/significance/game_over_coding_example.png" alt="Boolean Operators in code"width="80%">
         </div>
     </p>
 
     <p>
       <div class="flexbox-container">
         <div class="flexbox-item flexbox-item-1">
-      <img src="../images/false_true_in_code.jpg" alt="More Boolean Operators in code wit true or false"width="50%">
+      <img src="../images/significance/false_true_in_code.jpg" alt="More Boolean Operators in code wit true or false"width="50%">
         </div>
     </p>
 
