--- a/pages/functioning.html
+++ b/pages/functioning.html
@@ -14,17 +14,19 @@
 
     <p>
         <h1>Revolutionization of Computer Science<h1>
-        <h2>Functioning of the Creations<h2>
+        <h2 id="secondheading">Functioning of the Creations<h2>
     </p>
 
     <p>
         <h2>Boolean Algebra</h2>
+    </p>
+    <p>
         Boolean expressions compare two values and evaluates the results, which are always true or false (1 or 0). This made it possible to use normal algebraic techniques to solve equations and make logical relations.
     </p>
 
     <p>
         <figure>
-            <img src="../images/boolean_expressions_basic_example.jpg" alt="Basic Example of Boolean Expressions" width="20%">
+            <img src="../images/functioning/boolean_expressions_basic_example.jpg" alt="Basic Example of Boolean Expressions" width="20%">
          <figcaption>Boolean Expressions Example</figcaption>
         </figure>
     </p>
@@ -47,7 +49,7 @@
         <div class="flexbox-container">
             <div class="flexbox-item flexbox-item-1">
                 <figure>
-                    <img src="../images/boolean_operator_example_illustration.jpg" alt="Example of not operator" width="100%">
+                    <img src="../images/functioning/boolean_operator_example_illustration.jpg" alt="Example of not operator" width="100%">
                     <figcaption>Example of "not" Operator
                         <br>
                         Statement: not True, then False
@@ -60,7 +62,7 @@
         <div class="flexbox-container">
             <div class="flexbox-item flexbox-item-1">
                 <figure>
-                    <img src="../images/boolean_operator_true_false_example.jpg" alt="Example of input and result true or false" width="110%">
+                    <img src="../images/functioning/boolean_operator_true_false_example.jpg" alt="Example of input and result true or false" width="110%">
                     <figcaption>Example of Input and Result</figcaption>
                 </figure>
             </div>
@@ -72,12 +74,14 @@
 
     <p>
         <h2>Symbolic Logic</h2>
+    </p>
+    <p>
         Symbolic Logic is the simplest form of logic. It includes symbolic notation and variables to represent logical expressions and avoid vagueness like in the human speech.
     </p>
     
     <p>
         <figure>
-            <img src="../images/symbolic_logic_from_human_speech.jpg" alt="Example of input and result true or false" width="30%">
+            <img src="../images/functioning/symbolic_logic_from_human_speech.jpg" alt="Example of input and result true or false" width="30%">
             <figcaption>Example of Human Speech to symbols
                         <br>
                         Notice the clarity and brevity of the symbols in comparison to the speech
