--- a/pages/sources.html
+++ b/pages/sources.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title> George Boole - Bibliography</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -14,27 +15,58 @@
     <h1> Bibliography</h1>
 
     <p>
-        “Boolean Logic.” <cite>Illinois State Board of Education.</cite> <a href="https://www.isbe.net/CTEDocuments/BMCE-780026.pdf" target="_blank">isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024.
+        “Boolean Logic.” 
+        <cite>Illinois State Board of Education.
+        </cite> 
+        <br>
+        <a href="https://www.isbe.net/CTEDocuments/BMCE-780026.pdf" target="_blank">www.isbe.net/CTEDocuments/BMCE-780026.pdf</a>. Accessed 7 Sept. 2024.
     </p>
 
     <p>
-        Britannica, The Editors of Encyclopedia. “formal system.” <cite>Encyclopedia Britannica,</cite> 6 Jan. 2012, <a href="https://www.britannica.com/topic/formal-system" target="_blank">britannica.com/topic/formal-system</a>. Accessed 7 Sept. 2024.
+        Britannica, The Editors of Encyclopedia. “formal system.” 
+        <cite>Encyclopedia Britannica,</cite> 6 Jan. 2012,
+        <br>
+        <a href="https://www.britannica.com/topic/formal-system" target="_blank">www.britannica.com/topic/formal-system</a>. Accessed 7 Sept. 2024.
     </p>
 
     <p>
-        Burris, Stanley. “George Boole (Stanford Encyclopedia of Philosophy).” <cite>Stanford.edu,</cite> 29 Dec. 2021, <a href="http://plato.stanford.edu/entries/boole/" target="_blank">plato.stanford.edu/entries/boole/</a>. Accessed 7 Sept. 2024.
+        Burris, Stanley. “George Boole (Stanford Encyclopedia of Philosophy).” 
+        <cite>Stanford.edu,</cite> 29 Dec. 2021, 
+        <br>
+        <a href="http://plato.stanford.edu/entries/boole/" target="_blank">plato.stanford.edu/entries/boole/</a>. 
+        Accessed 7 Sept. 2024.
     </p>
 
     <p>
-        “Engineering|His Legacy| Computer Science | Who Invented Boolean| George Boole 200.” <cite>Georgeboole.com,</cite> 2024, <a href="https://georgeboole.com/boole/legacy/engineering/" target="_blank">georgeboole.com/boole/legacy/engineering/.</a> Accessed 11 Sept. 2024.
+        “Engineering|His Legacy| Computer Science | Who Invented Boolean| George Boole 200.” 
+        <cite>Georgeboole.com,</cite> 2024, 
+        <br>
+        <a href="https://georgeboole.com/boole/legacy/engineering/" target="_blank">georgeboole.com/boole/legacy/engineering/</a>.
+        Accessed 11 Sept. 2024.
     </p>
 
     <p>
-      Kiersz, Andy. “This Simple Math Concept Went Nowhere for a Century and Then — BOOM — Computers.”<cite>Business Insider,</cite> 22 July 2014, <a href="https://www.businessinsider.com/boolean-algebra-computers-2014-7" target="_blank">businessinsider.com/boolean-algebra-computers-2014-7</a> Accessed 7 Sept. 2024.
+      Kiersz, Andy. “This Simple Math Concept Went Nowhere for a Century and Then — BOOM — Computers.”
+      <cite>Business Insider,</cite> 22 July 2014, 
+      <br>
+      <a href="https://www.businessinsider.com/boolean-algebra-computers-2014-7" target="_blank">www.businessinsider.com/boolean-algebra-computers-2014-7</a>. 
+      Accessed 7 Sept. 2024.
     </p>
 
     <p>
-      “Phil. 60 Symbolic Logic I.”<cite>csus.edu,</cite><a href="https://www.csus.edu/indiv/d/dowdenb/60/foundations.htm" target="_blank">csus.edu/indiv/d/dowdenb/60/foundations.htm</a> Accessed 9 Sept. 2024.
+      “Phil. 60 Symbolic Logic I.”
+      <cite>csus.edu,</cite>
+      <br>
+      <a href="https://www.csus.edu/indiv/d/dowdenb/60/foundations.htm" target="_blank">www.csus.edu/indiv/d/dowdenb/60/foundations.htm</a>.
+      Accessed 9 Sept. 2024.
+    </p>
+
+    <p>
+      O'Connor, J.J., and Robertson E.F. “George Boole - Biography.” 
+      <cite>Maths History,</cite> June 2004, 
+      <br>
+      <a href="https://mathshistory.st-andrews.ac.uk/Biographies/Boole/" target="_blank">mathshistory.st-andrews.ac.uk/Biographies/Boole/</a>. 
+      Accessed 3 Oct. 2024.
     </p>
 
   </body>
