--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="./pages/functioning.html">Functioning of the Creations</a>
               </li>
               <li>
-                <a href="./pages/significance.html">Importance of the Creations</a>
+                <a href="./pages/significance.html">Significance of the Creations</a>
               </li>
             </ol>
           </li>
