--- a/pages/functioning.html
+++ b/pages/functioning.html
@@ -36,7 +36,7 @@
          <br>
          Statement: Mr. Brash teaches computer science and math.
          <br>
-         This statement is equal to saying: "Mr. brash teaches computer science." Because if one statement is true, then so is the other and vice versa.
+         This statement is equal to saying: "Mr. brash teaches computer science." Because if one statement is true, then so is the other and vice-versa.
     </p>
 
     <p>
