--- a/pages/significance.html
+++ b/pages/significance.html
@@ -14,7 +14,7 @@
     
     <p>
         <h1>Revolutionization of Computer Science<h1>
-        <h2 id="secondheading">Importance of the Creations<h2>
+        <h2 id="secondheading">Significance of the Creations<h2>
     </p>
 
     <p>
