--- a/pages/functioning.html
+++ b/pages/functioning.html
@@ -76,7 +76,7 @@
         <h2>Symbolic Logic</h2>
     </p>
     <p>
-        Symbolic Logic is the simplest form of logic. It includes symbolic notation and variables to represent logical expressions and avoid vagueness like in the human speech.
+        Symbolic logic is the simplest form of logic. It includes symbolic notation and variables to represent logical expressions and avoid vagueness like in the human speech.
     </p>
     
     <p>
