--- a/pages/history.html
+++ b/pages/history.html
@@ -18,12 +18,12 @@
       <h2>George Boole's Life</h2>
     </p>
     <p>
-      George Boole lived from 1815-1864 and worked as an English mathematician and philosopher. He was the first professor of math at University College Cork, Ireland (then: Queens College). Boole dedicated his life to understanding the human mind and with this diligentness, was able to apply mathematical ideas to logic to create Boolean Algebra and Symbolic Logic.
+      George Boole lived from 1815-1864 and worked as an English mathematician and philosopher. He was the first professor of math at University College Cork in Ireland (then: Queens College). Boole dedicated his life to understanding the human mind and with this diligentness, was able to apply mathematical ideas to logic to create Boolean algebra and symbolic logic.
     </p>
 
     <p>
       You can find out more about George Boole's life here:
-      <a href="https://mathshistory.st-andrews.ac.uk/Biographies/Boole/" target="_blank">Click Me!!!</a>
+      <a href="https://mathshistory.st-andrews.ac.uk/Biographies/Boole/" target="_blank">Click Me!</a>
     </p>
 
     <p>
@@ -66,12 +66,14 @@
             </th>
             <tr>
               <td>
-                An Essay to lead to a calculus of deductive reasoning.
+                An essay to lead to a calculus of deductive reasoning.
                 <br>
                 Explained the new branch of math: Boolean Algebra.
               </td>
               <td>
                 Explained that algebra can be adopted to logic instead of math.
+                <br>
+                Explained Symbolic Logic.
               </td>
           </tr>
       </table>
