--- a/pages/significance.html
+++ b/pages/significance.html
@@ -27,7 +27,7 @@
     <p>
         <b>Computer Circuits/Gates:</b>
         <br>
-        Boolean Algebra analyzed and was able to simplify digital circuits. For example, logic gatesuse Boolean Logic (a.k.a. Boolean Algebra) by controlling the circulation of electricity in a device. In addition, they use Boolean Operators and algebraic expressions to define instructions.
+        Boolean algebra analyzed and was able to simplify digital circuits. For example, logic gates use Boolean logic (a.k.a. Boolean algebra) by controlling the circulation of electricity in a device. In addition, they use Boolean operators and algebraic expressions to define instructions.
    </p>
 
     <p>
@@ -52,10 +52,10 @@
     <hr>
 
     <p>
-      <h2>Boolean Logic</h2>
+      <h2>Symbolic Logic</h2>
     </p>
     <p>
-      The creation of symbolic notation was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
+      The creation of symbolic logic was extremely benificial to clearly convey operations in a way computers could understand. This led to the creation of programming languages, which are filled with symbols that help the computer follow instructions.
     </p>
 
     <p>
